[package]
name = "dragonskale"
version = "0.1.4"
edition = "2021"
rust-version = "1.87.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "png",
    "webgl2",
    "x11",
] }
bevy_embedded_assets = "0.13.0"
bevy_enhanced_input = "0.14.1"
bevy_enoki = "0.4.0"
bevy_kira_audio = "0.23.0"
bevy_rapier2d = { version = "0.30.0", features = ["debug-render-2d"] }
noise = "0.9.0"
pathfinding = "4.14.0"
rand = "0.9.1"

[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
type_complexity = "allow"

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
getrandom = { version = "0.3", default-features = false, features = [
    "wasm_js",
] }

[package.metadata.bevy_cli.web.dev]
wasm-opt = ["-Os", "--enable-bulk-memory", "--all-features"]

[package.metadata.bevy_cli.web.release]
wasm-opt = ["--strip-debug", "-Os", "--enable-bulk-memory", "--all-features"]
